--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,7 @@
     <title>Влизане</title>
 </head>
 <body>
+    <div id="wrapper">
     <div id="title-box" class="cool-box">
             <% if(messages.success_msg) { %>
                <p> <%= messages.success_msg %></p>
@@ -34,6 +35,7 @@
         </div>
         <a href="/users/register">Регистрация</a>
     </form>
+    </div>
     </div>
 </body>
 </html>
