--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,8 @@
     <title>Влизане</title>
 </head>
 <body>
+    <div id="wrapper">
+
     <div id="title-box" class="cool-box">
 
             <% if(typeof errors != 'undefined') { %> <% errors.forEach(error => { %>              
@@ -40,7 +42,7 @@
             </div>
             <a href="/users/login">Влизане?</a>
         </form>
-
+    </div>
     </div>
 </body>
 </html>
